--- a/panis-boot-admin/pom.xml
+++ b/panis-boot-admin/pom.xml
@@ -34,6 +34,7 @@
     </dependencies>
 
     <build>
+        <finalName>icp-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
